# voice-auth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.claude/commands/: commit-message.md  pr-create.md  task-create.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
deploy/: artifact-registry-cleanup-policy.json
deployment/: README.md
docs/: ARCHITECTURE_GUIDE.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  MIGRATION_PLAN.md  REQUIREMENTS.md  api-specification.md  architecture-guide.md  deployment.md  requirements.md
docs/adr/: 001-sherpa-onnx-migration.md
migrations/: env.py
migrations/versions/: db58b2e5d823_initial.py
samples/: sample1.m4a  sample2.m4a
scripts/: docker-entrypoint.sh  download_models.py  download_models.sh  requirements.txt  setup-hooks.sh
voiceauth/: __init__.py
voiceauth/app/: __init__.py  dependencies.py  main.py  model_loader.py  settings.py
voiceauth/app/routers/: __init__.py  demo.py
voiceauth/app/static/js/: demo.js
voiceauth/app/templates/: demo.html
voiceauth/app/websocket/: __init__.py  enrollment.py  test_enrollment.py  test_verify.py  verify.py
voiceauth/audio/: __init__.py  converter.py
voiceauth/database/: __init__.py  exceptions.py  models.py  session.py  settings.py
voiceauth/database/migrations/: env.py
voiceauth/database/stores/: __init__.py  speaker_store.py
voiceauth/domain/: __init__.py  prompt_generator.py
voiceauth/domain/models/: __init__.py  speaker.py  voiceprint.py
voiceauth/domain/protocols/: __init__.py  asr.py  audio.py  enrollment.py  store.py  vad.py  verify.py  voiceprint.py
voiceauth/domain_service/: __init__.py  enrollment.py  settings.py  verify.py
voiceauth/engine/: __init__.py  exceptions.py  settings.py
voiceauth/engine/asr/: __init__.py  segmentation.py  sensevoice.py
voiceauth/engine/vad/: __init__.py  silero.py
voiceauth/engine/voiceprint/: __init__.py  campp.py
