[project]
name = "vca-server"
version = "0.1.0"
description = "VCA Server"
requires-python = ">=3.11,<3.12"
dependencies = ["vca-api", "vca-infra", "vca-auth", "vca-engine"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
vca-api = { workspace = true }
vca-infra = { workspace = true }
vca-auth = { workspace = true }
vca-engine = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright>=1.1.408",
    "ruff>=0.9.6",
    "coverage>=7.6.10",
    "pre-commit>=4.1.0",
    "pytest-cov>=7.0.0",
]

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["venv", ".venv", "alembic"]
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["packages"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["packages"]

[tool.coverage.report]
show_missing = true
